test/grammar/types/var_type_annotation/type_fail_6/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:1:1
  |
1 | name: "aa\"ab|" = "aa\"ab"
  | ^ expected str(aa"ab|), got str(aa"ab)
  |